[package]
name = "enceladus_api"
version = "0.1.0"
repository = "https://github.com/r-spacex/Enceladus-API-rs"
license = "Apache-2.0"
authors = ["Jacob Pratt <the.z.cuber@gmail.com>"]
edition = "2018"
publish = false

[dependencies]
chrono = "0.4.7"
clap = "2.33.0"
derive_more = "0.15.0"
diesel = { version = "1.4.2", features = ["serde_json"] }
dotenv = "0.14.1"
dotenv_codegen = "0.14.1"
enceladus_macros = { path = "../macros" }
futures-preview = { version = "0.3.0-alpha.17", features = ["io-compat"] }
hashbrown = "0.5.0"
itertools = "0.8.0"
jsonwebtoken = "5.0.1"
lru-cache = "0.1.2"
openssl = "0.10.24"
parking_lot = { version = "0.9.0", features = ["nightly"] }
reddit = { path = "../reddit" }
reqwest = "0.9.19"
rocket = "0.4.2"
rocket_cors = "0.5.0"
rocket_telemetry = { path = "../rocket_telemetry" }
serde = { version = "1.0.97", features = ["derive"] }
serde_json = "1.0.40"
tokio = "0.1.22"
uuid = { version = "0.7.4", features = ["v4"] }
ws = { git = 'https://github.com/jhpratt/ws-rs' }
derive_deref = "1.1.0"
once_cell = "0.2.4"

[dependencies.rocket_contrib]
default-features = false
features = ["diesel_postgres_pool", "json", "helmet"]
version = "0.4.2"

[dev-dependencies]
rand = "0.7.0"

[build-dependencies]
openssl = "0.10.24"
