[package]
name = "reddit"
version = "0.1.0"
authors = ["Jacob Pratt <the.z.cuber@gmail.com>"]
edition = "2018"
publish = false

[dependencies]
derive_builder = "0.7.2"
derive_more = "0.15.0"
itertools = "0.8.0"
once_cell = "0.2.4"
reqwest = "0.9.19"
serde = "1.0.97"
serde_json = "1.0.40"
uuid = "0.7.4"
getset = "0.0.7"
